# PySD

./: .copilot-instructions.md  .gitignore  AGENT_INSTRUCTIONS.md  CODE_REVIEW.md  CODE_REVIEW_COMPREHENSIVE.md  CONSISTENT_CONTAINER_INTERFACE.md  How_to_Add_New_Statements.md  PySD_Validation_System_User_Guide.md  README.md  REFACTORING_PLAN.md  SD_BASE_Refactoring_Plan.md  SHSEC_Implementation_Summary.md  Step_by_Step_Migration_Guide.md  dam.inp  dam.py  gemini.md  heading_demo_output.txt  main.py  migration_demo.py  pyproject.toml  src_code_overview.md  test_basco_validation.py  test_complete_api.py  test_disabled_validation.inp  test_error_message_builder.py  test_new_api.py  test_phase2.py  test_retyp.inp  test_retyp_materials_demo.py  test_single.inp  test_successful_api.inp  test_validation_system.py  test_xtfil_validation.py  turtorial.inp  validation_level_demo.py
debug/: LORES_XTFIL_DESEC_Modernization_Summary.md  Pydantic Migration and Container-Based Validation Implementation Guide.md  RFILE_FILST_Implementation_Summary.md  SHAXE_Implementation_Summary.md  Statement_Migration_Guide.md  TABLE_Modernization_Summary.md  Validation_Level_Configuration_Guide.md  aquapod_sd.inp  debug_basco.inp  debug_basco_tuple.py  debug_cases_normalize.py  debug_collection_detailed.py  debug_combined_extraction.py  debug_decas_attributes.py  debug_empty.inp  debug_exact_main.py  debug_fields.py  debug_getattr.py  debug_greco.py  debug_greco_validation.py  debug_load_cases.py  debug_loadc_fields.py  debug_loadc_validation.py  debug_minimal_add.py  debug_parent.py  debug_rules.py  debug_string_case.py  debug_tuple_unpacking.py  debug_validation_exact.py  debug_validation_rule.py  es3.py  final_refactoring_summary.py  heading_demo.inp  phase2_demo.py  refactoring_summary.py  test.inp  test1 copy.inp  test3.inp  test_bas_heading.inp  test_basco_103.py  (+38 more)
docu/: REFACTORING_PLAN.md  statement_implementation_instruction.md
examples/: consistent_container_demo.py
(+150 files in other folders)
